# rapidOcr

./: .gitignore  CMakeLists.txt  main.cpp
Release/: rapid_ocr.exp  rapid_ocr.lib
include/: DbNet.h  OcrLite.h  clipper.hpp
src/: AngleNet.cpp  AngleNet.h  CrnnNet.cpp  CrnnNet.h  DbNet.cpp  DbNet.h  OcrLite.cpp  OcrLite.h  OcrStruct.h  OcrUtils.cpp  OcrUtils.h  clipper.cpp
